--- a/Project2/sdi-project2.html
+++ b/Project2/sdi-project2.html
@@ -11,8 +11,7 @@
     <h2>Project 2</h2>
 </header>
 <article>
-<p>In this space you should provide a short (one paragraph) explanation of your theme and why you chose it.</p>
-<p>You may also use this space to explain any elements of your code story that may not be entirely clear.</p>
+<p>I continued with my super hero theme.</p>
 </article>
 <footer>
     <p>09/04/12, Lenvil Roose</p>
